# alidns-ddns

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  alidns-ddns.service  config.example.json  env.example  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
